# File-Fellow

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
config/: config.yaml  settings.py
eval_report/: eval_report.json
migrations/: 001_initial.sql  002_users_conversations.sql  003_hybrid_search_prep.sql
scripts/: evaluate.py  init_db.py
src/: __init__.py
src/api/: __init__.py  app.py  deps.py  schema.py  server.py
src/api/routers/: __init__.py  documents.py  health.py  qa.py  summary.py
src/api/schemas/: __init__.py  documents.py  qa.py  summary.py
src/core/: __init__.py  exceptions.py  logger.py  utils.py
src/db/: __init__.py  engine.py
src/db/models/: __init__.py  conversation.py  document.py
src/db/repositories/: document_repo.py  history_repo.py  vector_repo.py
src/ingestion/: __init__.py  chunker.py  embedder.py  parser.py  pipeline.py  validators.py  vector_store.py
src/llm/: __init__.py  llm_factory.py  prompt_builder.py  prompts.py  qa_chain.py  summarizer.py
src/memory/: __init__.py  history_store.py
src/retrieval/: __init__.py  document_retriever.py  history_retriever.py  retriever.py
src/services/: __init__.py  qa.py  summary.py
src/storage/: __init__.py  document_store.py  history_store.py
src/ui/: __init__.py  app.py  formatters.py  gradio_app.py  session.py  styles.py
src/ui/tabs/: chat.py  summary.py  upload.py
