[project]
name = "smart-contract-assistant"
version = "0.1.0"
description = "A production-quality, **multi-document RAG** (Retrieval-Augmented Generation) web application for uploading files and interacting with them via a conversational assistant"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb==1.5.0",
    "faiss-cpu==1.13.2",
    "fastapi==0.129.0",
    "gradio==6.6.0",
    "langchain==1.2.10",
    "langchain-community==0.4.1",
    "langchain-core==1.2.13",
    "langchain-groq==1.1.2",
    "langserve[all]==0.3.3",
    "numpy==2.4.2",
    "pdfplumber==0.11.9",
    "pymupdf==1.27.1",
    "python-docx==1.2.0",
    "python-dotenv==1.2.1",
    "python-multipart==0.0.22",
    "sentence-transformers==5.2.3",
    "uvicorn[standard]==0.41.0",
]

# uv add -r requirements.txt
